force-app/main/default/objects/Car__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars1</relationshipName>
    <type>Lookup</type>
</CustomField>