force-app/main/default/objects/Car__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars1</relationshipName>
    <type>Lookup</type>
</CustomField>